package aecor.schedule.serialization.protobuf;
option optimize_for = SPEED;

message ScheduleEntryAdded {
  required string scheduleName = 1;
  required string entryId = 2;
  required string correlationId = 3;
  optional bytes payload = 4;
  required int64 dueToInEpochSeconds = 5;
}

message ScheduleEntryFired {
  required string scheduleName = 1;
  required string entryId = 2;
  required string correlationId = 3;
  optional bytes payload = 4;
}